@@ -282,7 +282,7 @@ function GAMETYPE:InitSettings()
     GAMEMODE:AddSetting("abh", {
         Category = "SERVER",
         NiceName = "#GM_ABH",
-        Description = "Accelerated Back Hopping",
+        Description = "Accelerated backhopping",
         Type = "bool",
         Default = false,
         Flags = bit.bor(0, FCVAR_ARCHIVE, FCVAR_NOTIFY, FCVAR_REPLICATED),
