@@ -1,6 +1,7 @@
 0.9.6
 - Improved: Removed Cockroaches from kill feed, players will no longer get points for killing them.
 - Fix: Lua errors when cleaning up map during players view controlled by point_viewcontrol.
+- Feature: Accelerated backhopping
 
 0.9.5
 - Improved: Add projected textures as an option for physcannon glow, enabled by default (physcannon_glow = 1)
